# Truth-Table-Generator

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  lexer.l
